--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
     </div>
     <div class="right-section">
         <a href="#" id="carouselLink">
-            <img src="C:\Users\Lopez\Documents\vaticano\papapresidente.jpg" class="active" alt="Imagen 1">
-            <img src="C:\Users\Lopez\Documents\vaticano\papapresidente1.jpg" alt="Imagen 2">
-            <img src="C:\Users\Lopez\Documents\vaticano\vcb1.jpg" alt="Imagen 3">
+            <img src="https://raw.githubusercontent.com/vaticanoorg/vaticanoior/main/papapresidente.jpg" class="active" alt="Imagen 1">
+            <img src="https://raw.githubusercontent.com/vaticanoorg/vaticanoior/main/papapresidente1.jpg" alt="Imagen 2">
+            <img src="https://raw.githubusercontent.com/vaticanoorg/vaticanoior/main/vcb1.jpg" alt="Imagen 3">
         </a>
         <button class="carousel-button" onclick="showNextImage()">></button>
     </div>
@@ -237,9 +237,9 @@
     const carouselLinkElement = document.getElementById('carouselLink');
 
     const imageInfo = [
-        { src: "C:\Users\Lopez\Documents\vaticano\papapresidente.jpg", link: "https://www.vaticannews.va/es.html", text: "Texto_de_la_imagen_1" },
-        { src: "C:\Users\Lopez\Documents\vaticano\papapresidente1.jpg", link: "https://www.vaticannews.va/es.html", text: "Texto_de_la_imagen_2" },
-        { src: "C:\Users\Lopez\Documents\vaticano\vcb1.jpg", link: "https://www.vaticannews.va/es.html", text: "Texto_de_la_imagen_3" }
+        { src: "https://raw.githubusercontent.com/vaticanoorg/vaticanoior/main/papapresidente.jpg", link: "https://www.vaticannews.va/es.html", text: "Texto_de_la_imagen_1" },
+        { src: "https://raw.githubusercontent.com/vaticanoorg/vaticanoior/main/papapresidente1.jpg", link: "https://www.vaticannews.va/es.html", text: "Texto_de_la_imagen_2" },
+        { src: "https://raw.githubusercontent.com/vaticanoorg/vaticanoior/main/vcb1.jpg", link: "https://www.vaticannews.va/es.html", text: "Texto_de_la_imagen_3" }
     ];
 
     function showNextImage() {
