--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         }
 
         .login-box {
-            background-color: #5AB4F2;
+            background-color: #EABE3F;
             color: #fff;
             padding: 10px;
             margin-bottom: 10px;
@@ -104,7 +104,7 @@
         }
 
         button[type="submit"] {
-            background-color: #5AF296;
+            background-color: #EABE3F;
             color: #FFFFFF;
         }
 
