--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         }
 
         .footer {
-            background-color: #5AB4F2;
+            background-color: #EABE3F;
             color: #fff;
             padding: 20px;
             text-align: center;
