--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
 
 <div class="login-section">
     <div class="left-section">
-        <div class="login-box">Usuario</div>
-        <input type="text" placeholder="Ingresa tu usuario" id="usernameInput" aria-label="Usuario">
+        <div class="login-box">utente</div>
+        <input type="text" placeholder="Inserisci il tuo nome utente" id="usernameInput" aria-label="Usuario">
         <div class="login-box">Contraseña (solo números)</div>
-        <input type="password" placeholder="Ingresa tu contraseña (solo números)" id="passwordInput" aria-label="Contraseña">
+        <input type="password" placeholder="inserisci la tua password (solo numeri)" id="passwordInput" aria-label="Contraseña">
         <div class="keyboard">
             <button onclick="appendNumber(1)">1</button>
             <button onclick="appendNumber(2)">2</button>
@@ -158,8 +158,8 @@
         </div>
         <button type="submit" id="continueButton">Continuar</button>
         <div>
-            <a href="#">Olvidaste tu usuario</a><br>
-            <a href="#">Problemas para conectarte</a>
+            <a href="#">Hai dimenticato il tuo nome utente</a><br>
+            <a href="#">problemi di connessione?</a>
         </div>
     </div>
     <div class="right-section">
