--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         }
 
         .login-box {
-            background-color: #EABE3F;
+            background-color: #A99F78;
             color: #fff;
             padding: 10px;
             margin-bottom: 10px;
