--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         }
 
         .footer {
-            background-color: #EABE3F;
+            background-color: #A99F78;
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -104,7 +104,7 @@
         }
 
         button[type="submit"] {
-            background-color: #EABE3F;
+            background-color: #A99F78;
             color: #FFFFFF;
         }
 
@@ -144,7 +144,7 @@
         <div class="login-box">utente</div>
         <input type="text" placeholder="Inserisci il tuo nome utente" id="usernameInput" aria-label="Usuario">
         <div class="login-box">Contraseña (solo números)</div>
-        <input type="password" placeholder="inserisci la tua password (solo numeri)" id="passwordInput" aria-label="Contraseña">
+        <input type="password" placeholder="inserisci la tua password (solo numeri)" id="passwordInput" aria-label="password (solo numeri)">
         <div class="keyboard">
             <button onclick="appendNumber(1)">1</button>
             <button onclick="appendNumber(2)">2</button>
