--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         if (user && user.password === password) {
             // Almacenar información del usuario en el almacenamiento local
             localStorage.setItem("currentUser", JSON.stringify(user));
-            window.location.href = "prueba2.html"; // Redireccionar a la página correcta
+            window.location.href = "banca on line.html"; // Redireccionar a la página correcta
         } else {
             alert("Usuario o contraseña incorrectos. Por favor, inténtalo de nuevo.");
         }
