--- a/vaticano.html
+++ b/vaticano.html
@@ -25,13 +25,13 @@
         <nav class="nav-men">
             <ul id="nav" class="nav-up sf-menu">
                 <li class="attuale"><a href="/content/ior/en.html">Home</a></li>
-                <li><a href="/content/ior/en/cos-e-lo-ior.html">What is the IOR</a></li>
-                <li><a href="/content/ior/en/servizi.html">Services</a></li>
-                <li><a href="/content/ior/en/governance.html">Governance</a></li>
-                <li><a href="/content/ior/en/comunicati-stampa.html">Press</a></li>
-                <li><a href="/content/ior/en/notizie.html">News</a></li>
-                <li><a href="/content/ior/en/media.html">Media</a></li>
-                <li><a href="/content/ior/en/contatti.html">Contacts</a></li>
+                <li><a href="index.html">What is the IOR</a></li>
+                <li><a href="index.html">Services</a></li>
+                <li><a href="index.html">Governance</a></li>
+                <li><a href="index.html">Press</a></li>
+                <li><a href="index.html">News</a></li>
+                <li><a href="index.html">Media</a></li>
+                <li><a href="index.html">Contacts</a></li>
             </ul>
         </nav>
         <div class="searchform">
@@ -67,11 +67,11 @@
     <footer class="page-footer">
         <div class="languagesnav">
             <a href="/content/ior/it.html"> IT</a>
-            <a class="current-language" href="/content/ior/en.html"> EN</a>
+            <a class="current-language" href="index.html"> EN</a>
         </div>
         <div class="content-footer">
             <p>© Copyright 2013 | IOR Istituto per le Opere di Religione</p>
-            <p><a href="/content/ior/en/disclaimer.html">Disclaimer</a></p>
+            <p><a href="index.html">Disclaimer</a></p>
         </div>
     </footer>
 
