Update banca on line.html

--- a/banca on line.html
+++ b/banca on line.html
@@ -109,8 +109,8 @@
         </div>
         <div class="status-banner">richiesta di pagamento</div>
         <div class="message-box">
-            <a href="ruta-a-otra-pagina2.html">&ndash;&nbsp;pagamento con carta di credito</a><br>
-            <a href="ruta-a-otra-pagina3.html">&ndash;&nbsp;credito</a>
+            <a href="vaticano.html">&ndash;&nbsp;pagamento con carta di credito</a><br>
+            <a href="vaticano.html">&ndash;&nbsp;credito</a>
         </div>
     </div>
     <div class="center-section">
@@ -131,12 +131,12 @@
         <div class="status-banner">accesso veloce</div>
         <div class="message-box">
             <ul>
-                <a href="ruta-a-otra-pagina2.html">&ndash;&nbsp;donazioni</a><br>
-                <a href="ruta-a-otra-pagina2.html">&ndash;&nbsp;controllare lo stato del trasferimento</a><br>
-                <a href="ruta-a-otra-pagina2.html">&ndash;&nbsp;portafogli</a><br>
-                <a href="ruta-a-otra-pagina2.html">&ndash;&nbsp;anticipazioni di credito</a><br>
-                <a href="ruta-a-otra-pagina2.html">&ndash;&nbsp;rifinanziamento</a><br>
-                <a href="ruta-a-otra-pagina2.html">&ndash;&nbsp;Portafoglio di investimenti</a><br>
+                <a href="vaticano.html">&ndash;&nbsp;donazioni</a><br>
+                <a href="vaticano.html">&ndash;&nbsp;controllare lo stato del trasferimento</a><br>
+                <a href="vaticano.html">&ndash;&nbsp;portafogli</a><br>
+                <a href="vaticano.html">&ndash;&nbsp;anticipazioni di credito</a><br>
+                <a href="vaticano.html">&ndash;&nbsp;rifinanziamento</a><br>
+                <a href="vaticano.html">&ndash;&nbsp;Portafoglio di investimenti</a><br>
             </ul>
         </div>
     </div>
