--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
 
         // Verificar credenciales usando el objeto users
         const users = {
-            "juana6025": {password: "23456", name: "Juan F Acevedo S", accountNumber: "40938451664", mensaje1:"consignacion $33.638.000.000.00 dolares", mensaje2:"Impuesto especial a bancos. correspondiente al 1.6%.", mensaje3:"Estado de cuenta retiro pendiente tramite legar IEB"},
-            "Mflun9458": {password: "2345", name: "Maria Fuentes Luna", accountNumber: "40938451664", mensaje1:"consignacion $33.638.000.000.00 dolares", mensaje2:"Impuesto especial a bancos. correspondiente al 1.6%.", mensaje3:"Estado de cuenta retiro pendiente tramite legar IEB"}, 
+            "carvaz6025": {password: "23456", name: "carlos vazquez aponte", accountNumber: "40938451664", mensaje1:"eros", mensaje2:"eros", mensaje3:"eros"},
+            "sarzqap023": {password: "23458", name: "Sara Vazquez Aponte", accountNumber: "40938451664", mensaje1:"eros", mensaje2:"eros", mensaje3:"eros"}, 
             "sovzqap023": {password: "23458", name: "Sorania Vazquez Aponte", accountNumber: "878865676567", mensaje1:"eros", mensaje2:"eros", mensaje3:"eros"},
             "vavzqap023": {password: "23456", name: "Vanesa Vazquez Aponte", accountNumber: "978865676567", mensaje1:"eros", mensaje2:"eros", mensaje3:"eros"},
             "brvzqap023": {password: "23456", name: "Bran Vazquez Aponte", accountNumber: "078865676567", mensaje1:"eros", mensaje2:"eros", mensaje3:"eros"},
