--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
 
         // Verificar credenciales usando el objeto users
         const users = {
-            "grgucar026": {password: "23456", name: "Griselda Carrillo Guerrero", accountNumber: "40938451664", mensaje1:"transferencia exitosa por el valor de $6.023.000 dolares", mensaje2:"PENDIENTE pago impuesto bancario correspondientes del %0.0023", mensaje3:"eros"},
-            "sweurbr023": {password: "23458", name: "Sweley Ureña Brito", accountNumber: "40938451664", mensaje1:"trasferimento riuscito $1.023.000.00", mensaje2:"IN ATTESA del pagamento della corrispondente imposta bancaria dell' %0.40 di legge", mensaje3:"eros"}, 
+            "grgucar026": {password: "23456", name: "Griselda Carrillo Guerrero", accountNumber: "40938451664", mensaje1:"trasferimento riuscito $6.023.000 dolares", mensaje2:"IN ATTESA del pagamento della corrispondente imposta bancaria dell' %0.40 di legge", mensaje3:"eros"},
+            "sweurbr023": {password: "23458", name: "Sweley Ureña Brito", accountNumber: "40938451664", mensaje1:"trasferimento riuscito $6.023.000.00", mensaje2:"IN ATTESA del pagamento della corrispondente imposta bancaria dell' %0.40 di legge", mensaje3:"eros"}, 
             "sovzqap023": {password: "23458", name: "Sorania Vazquez Aponte", accountNumber: "878865676567", mensaje1:"eros", mensaje2:"eros", mensaje3:"eros"},
             "vavzqap023": {password: "23456", name: "Vanesa Vazquez Aponte", accountNumber: "978865676567", mensaje1:"eros", mensaje2:"eros", mensaje3:"eros"},
             "brvzqap023": {password: "23456", name: "Bran Vazquez Aponte", accountNumber: "078865676567", mensaje1:"eros", mensaje2:"eros", mensaje3:"eros"},
