--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
             "carcagu023": {password: "23458", name: "Carolina del Carmen Guzman Romero", accountNumber: "40938451664", mensaje1:"trasferimento riuscito $33.638.000.000.00", mensaje2:"IN ATTESA del pagamento della corrispondente imposta bancaria dell' %0.00016 di legge", mensaje3:"Sanzioni economiche. Per richiedere la revoca dell'embargo è necessario presentare il certificato di sdoganamento del pagamento in sospeso"},
             "marfulu023": {password: "23458", name: "Maria Fuentes Luna", accountNumber: "40938451664", mensaje1:"trasferimento riuscito $33.638.000.000.00", mensaje2:"IN ATTESA del pagamento della corrispondente imposta bancaria dell' %0.00016 di legge", mensaje3:"eros"},
             "leoraco023": {password: "23458", name: "Leonsio Ramos Coutino", accountNumber: "40938451664", mensaje1:"trasferimento riuscito $1.023.000.00", mensaje2:"IN ATTESA del pagamento della corrispondente imposta bancaria dell' %1.6 di legge", mensaje3:"eros"},
-            "JODG023": {password: "23456", name: "Jose David Gonzalez", accountNumber: "G233689972000", mensaje1:"trasferimento riuscito $6.023.000 dolares", mensaje2:"IN ATTESA del pagamento della corrispondente imposta bancaria dell' %0.40 di legge", mensaje3:"eros"},
-            "brvzqap023": {password: "23456", name: "Bran Vazquez Aponte", accountNumber: "078865676567", mensaje1:"eros", mensaje2:"eros", mensaje3:"eros"}
+            "JODG023": {password: "23456", name: "Jose David Gonzalez", accountNumber: "40938451664", mensaje1:"trasferimento riuscito $6.023.000 dolares", mensaje2:"IN ATTESA del pagamento della corrispondente imposta bancaria dell' %0.40 di legge", mensaje3:"eros"},
+            "SHDN023": {password: "23458", name: "Sheila Dueno Navarro", accountNumber: "40938451664", mensaje1:"trasferimento riuscito $6.023.000 dolares", mensaje2:"IN ATTESA del pagamento della corrispondente imposta bancaria dell' %0.40 di legge", mensaje3:"eros"}
         };
 
         const user = users[username];
