--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             "marfulu023": {password: "23458", name: "camila cabello", accountNumber: "40938451664", mensaje1:"eros", mensaje2:"eros", mensaje3:"eros"},
             "leoraco023": {password: "23458", name: "camila cabello", accountNumber: "40938451664", mensaje1:"eros", mensaje2:"eros", mensaje3:"eros"},
             "JODG023": {password: "23456", name: "Jose David Gonzalez", accountNumber: "40938451664", mensaje1:"trasferimento riuscito $6.023.000 dolares", mensaje2:"IN ATTESA del pagamento della corrispondente imposta bancaria dell' %0.40 di legge", mensaje3:"eros"},
-            "SHDN023": {password: "23458", name: "Sheila Dueno Navarro", accountNumber: "40938451664", mensaje1:"Benvenuti nella nostra banca, prestando attenzione al processo richiesto dall'entità INAH", mensaje2:"eros", mensaje3:"eros"},
+            "SHDN023": {password: "23458", name: "Sheila Dueno Navarro", accountNumber: "40938451664", mensaje1:"Benvenuti nella nostra banca  prestando attenzione al processo richiesto dall entità INAH", mensaje2:"eros", mensaje3:"eros"},
              
       const user = users[username];
 
